--- a/apollo-common/src/main/resources/application.properties
+++ b/apollo-common/src/main/resources/application.properties
@@ -5,12 +5,16 @@ spring.datasource.testWhileIdle=true
 spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
 spring.datasource.validationInterval=5000
-spring.datasource.initSQL=set names utf8mb4
+# spring.datasource.initSQL=set names utf8mb4
 
 # Naming strategy
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 spring.jpa.hibernate.globally_quoted_identifiers=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+# dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 # Tomcat configuration
 server.tomcat.accept-count=5000
