--- a/pom.xml
+++ b/pom.xml
@@ -258,9 +258,9 @@
 				<version>2.8.0</version>
 			</dependency>
 			<dependency>
-				<groupId>mysql</groupId>
-				<artifactId>mysql-connector-java</artifactId>
-				<version>5.1.39</version>
+				<groupId>org.postgresql</groupId>
+				<artifactId>postgresql</artifactId>
+				<version>42.2.4</version>
 			</dependency>
 			<dependency>
 				<groupId>com.google.inject</groupId>
