--- a/apollo-common/src/main/resources/application.properties
+++ b/apollo-common/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.mvc.converters.preferred-json-mapper=gson
 # DataSource
-#spring.datasource.hikari.connectionInitSql=set names utf8mb4
 spring.datasource.driver-class-name=org.postgresql.Driver
 # Naming strategy
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
