--- a/apollo-common/src/main/resources/application.properties
+++ b/apollo-common/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.mvc.converters.preferred-json-mapper=gson
 # DataSource
+spring.datasource.url=jdbc:postgresql://localhost:5532/apolloconfig
+spring.datasource.username=growingio
+spring.datasource.password=postgres    
 spring.datasource.driver-class-name=org.postgresql.Driver
 # Naming strategy
 spring.jpa.show-sql=true
@@ -7,8 +10,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.globally_quoted_identifiers=true
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 # Tomcat configuration
 server.tomcat.accept-count=5000
 # Increase tomcat header size for longer GET query parameter, should be n * 1024
@@ -19,4 +20,4 @@ logging.logback.rollingpolicy.max-file-size=50MB
 logging.logback.rollingpolicy.max-history=10
 management.endpoints.web.exposure.include=info,health,metrics,prometheus
 # Project information
-spring.info.git.location=classpath:apollo-git.properties
+#spring.info.git.location=classpath:apollo-git.properties
