--- a/apollo-configservice/src/main/resources/application.yml
+++ b/apollo-configservice/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: apollo-configservice
+  datasource:
+    url: jdbc:postgresql://localhost:5532/apollo-config
+    username: growingio
+    password: postgres
   profiles:
     active: dev
   cloud:
